# Immersive-Writer

./: .gitignore  README.md  components.json  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
src/: App.svelte  app.css  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/example_stories/: TortoiseAndTheHare.json
src/lib/components/: MainMenu.svelte  Notifications.svelte  StoryViewer.svelte
src/lib/components/editor/: BackgroundPopup.svelte  DecorationPopup.svelte  EditorOverlay.svelte
src/lib/components/ui/menubar/: index.js  menubar-checkbox-item.svelte  menubar-content.svelte  menubar-group-heading.svelte  menubar-item.svelte  menubar-label.svelte  menubar-menu.svelte  menubar-portal.svelte  menubar-radio-group.svelte  menubar-radio-item.svelte  menubar-shortcut.svelte  menubar-sub-content.svelte  menubar-sub-trigger.svelte  menubar-sub.svelte  menubar-trigger.svelte  menubar.svelte
src/lib/stores/: global.js
src/lib/tiptap/extensions/: font_size.js
