[package]
name = "immersive-writer"
version = "0.1.0"
description = "A story writing & reading app with dynamic text, visual effects, and background images/audio that can be configured to change based on reading progress."
authors = ["xStri"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
